[package]
name = "geoint"
version = "0.1.0"
authors = ["Jan Tschada <gisfromscratch@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geoint"
crate-type = ["cdylib"]

[dependencies]
geo = "0.15.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]